unpackaged/main/default/objects/Claims__c/Claims__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <label>Claims Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>