unpackaged/main/default/objects/Claims__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>