unpackaged/main/default/objects/Claims__c/fields/Type_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loss__c</fullName>
    <label>Type of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Worker's Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>